<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:foreground="?selectableItemBackground"
    app:cardCornerRadius="12dp"
    app:cardElevation="3dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_goods"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:scaleType="centerCrop"
            app:layout_constraintDimensionRatio="w,1:1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:src="@drawable/img"
            android:contentDescription="@string/todo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_goods"
            android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:text="@string/black_shack"
                    android:textColor="@color/black"
                    android:textSize="10sp"
                    android:textStyle="bold"
                    tools:ignore="SmallSp" />

                <TextView
                    android:id="@+id/tv_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:text="@string/so_good"
                    android:textColor="@color/gray"
                    android:textSize="6sp"
                    android:textStyle="normal"
                    tools:ignore="SmallSp" />

                <TextView
                    android:id="@+id/tv_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:text="@string/good_type"
                    android:textColor="@color/black"
                    android:textSize="11sp"
                    android:textStyle="normal" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp">

                    <TextView
                        android:id="@+id/tv_unit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/amb_unit"
                        android:textSize="8sp"
                        tools:ignore="SmallSp" />

                    <TextView
                        android:id="@+id/tv_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="15sp"
                        android:textColor="@color/red"
                        android:textStyle="bold"
                        android:text="@string/_2000_00" />


                    <TextView
                        android:id="@+id/tv_store"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end|center_vertical"
                        android:text="@string/_1000"
                        android:textSize="8sp"
                        tools:ignore="SmallSp" />

                </LinearLayout>
            </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>

